tests/paczka1/fuzzy1/49367664.err
Error in line 11: jGdF5r718 S83 7,8
Error in line 13: jGdF5r718 A40 34,1
Error in line 25: pUFPx7lNl0 A63 22,0
Error in line 36: jGdF5r718 S83 231,1
